# litterbox_monitoring_system

./: .flake8  .gitignore  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt  testresult.json
.github/workflows/: ci.yml
backend/: backup_litterbox_data_20250812_121434.json  litterbox_data_20250812_091634.json  litterbox_data_20250812_092237.json  pyproject.toml  requirements.txt
backend/src/: .env.example  app.py
backend/src/config/: logging.py
backend/src/data_analyzer/: data_analyzer.py
backend/src/data_persister/: Dockerfile  data_persister.py  db_writer.py
backend/src/data_source/: Dockerfile  litterbox_edge_device_simulator.py
backend/src/data_source/simulated_litterbox_data/: backup_litterbox_data_20260303_104329.json  backup_litterbox_data_20260304_194529.json  backup_litterbox_data_20260304_195222.json  backup_litterbox_data_20260304_195822.json
backend/src/data_source_simulator/: Dockerfile  litterbox_edge_device_simulator.py
backend/src/database/: postgresql_gateway.py
backend/src/database_support/: mongodb_gateway.py  postgresql_gateway.py
backend/src/db_ask/: __init__.py  chat.py  claude.py  cli.py  mcp_client.py  tools.py
backend/src/models/: models.py
backend/src/rabbitmq_support/: rabbitmq_gateway.py
backend/src/services/: data_synchronizer.py
backend/tests/: test_data_source_simulator.py  test_models.py  test_postgresql_gateway.py
config/: logging.py
data_collector/: litterbox_api_client.py
docs/architecture/: mcp_claude_integration.drawio
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: config.js  globals.css  layout.js  next.config.js  page.js
frontend/src/app/components/: AuthForm.js  CatsTab.js  Dashboard.js  EdgeDevicesTab.js  LitterboxUsageTab.js  LitterboxUsageTabFuture.js  LitterboxesTab.js
frontend/src/app/contexts/: AuthContext.js
models/: litterbox_usage_data.py
src/app/backend/: app.py
src/app/frontend/litterbox-frontend/: package-lock.json  package.json
src/app/frontend/litterbox-frontend/src/app/: page.js
src/app/frontend/litterbox-frontend/src/app/components/: AuthForm.js  AuthFormOutdated.js
src/data_analyzer/: data_analyzer.py
src/data_collector/: litterbox_api_client.py
src/data_persister/: db_writer.py
src/data_source_simulator/: litterbox_edge_device_simulator.py
src/database/: gateway.py  postgresql_gateway.py
src/models/: litterbox_usage_data.py  models.py
src/services/: data_synchronizer.py
tests/: test_data_source_simulator.py  test_litterbox_api_client.py  test_models.py  test_postgresql_gateway.py
