[tool.poetry]
name = "litterbox-monitoring-system-backend"
version = "0.1.0"
description = "A Python package retrieving litterbox usage data and storing in a database."
authors = ["Jing Li"]
readme = "README.md"
packages = [ {include = "config", from = "src"},
            {include = "database", from = "src"},
            {include = "models", from = "src"},
            {include = "services", from = "src"},
            {include = "data_source_simulator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.10"
requests = "^2.32.4"
sqlalchemy = "^2.0.41"
schedule = "^1.2.2"
pika = "^1.3.2"
flask = "^3.1.1"
flask-bcrypt = "^1.0.1"
flask-jwt-extended = "^4.7.1"
flask-cors = "^6.0.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.4.1"
mypy-extensions = "^1.1.0"
pluggy = "^1.6.0"
iniconfig = "^2.1.0"
pathspec = "^0.12.1"
pygments = "^2.19.2"
pytest-asyncio = "^1.1.0"
flake8 = "^7.3.0"
mypy = "^1.17.0"
safety = "^3.6.0"
pytest-cov = "^6.2.1"
isort = "^6.0.1"
autoflake = "^2.3.1"
types-requests = "^2.32.4.20250611"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
